# systemd-autoreboot-test

./: .gitignore  Cargo.toml  Makefile  OVMF_VARS.fd
esp/EFI/BOOT/: boot_entry.efi
esp/loader/: loader.conf
esp/loader/entries/: bad+3.conf  good+3.conf
src/: main.rs
