[package]
name = "efi_reboot"
version = "0.1.0"
edition = "2021"

[dependencies]
r-efi = "5.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Use a single codegen unit for better optimization

[[bin]]
name = "efi_reboot"
path = "src/main.rs"